# HomeWorks-2021

./: .gitignore  1.10.c  1.5.c  1.6.c  1.7.c  1.8.c  1.9.c  1.txt  10.c  2_1.c  3_1.c  5.c  6(бинарноедерево).c  6.c  7.c  8.c  9.c  AnnaKarenina.txt  B  Binary tree statistics.txt  Binary-tree statistics.txt  BinaryTree statistics.txt  BinaryTree.c  BinaryTree.h  Binary_Tree.c  Bit tricks.c  BitTricks.c  BitTricksOskin.c  BitTricksOskin2.c  BufferOverflow.c  CMakeLists.txt  CW.c  ConsoleApplication3.c  Division.c  EffectiveExponentiation.c  HW7.c  HashTable.c  HashTable.h  HashTable_Hw.c  HomeWork3_2.c  (+75 more)
Analysis/: polynome.txt
ClassWork_19.10/: CW.c
Cw_19.10/: div.c  strxxx.c
EffectiveExponentiation/: main.c
FibNumbers/: main.c
Gagin_HW_2/: CMakeLists.txt  main.c
Gagin_hw_5/: about text and stat table.txt  about text.txt
Gagin_hw_6/: about text and stat table.txt
Gagin_hw_7/: CMakeLists.txt  main.c
HW1/: README.md
HW2/: CMakeLists.txt  Palindrome.c  Prime_nums.c  Sign_of_ints.c  division.c  main.c
HW4/: bit_tricks.c
HW5/: CMakeLists.txt  main.c  statistics.txt
HW6/: CMakeLists.txt  TreeStatistics.txt  main.c  my.txt
HW7/: main.c
HWU1/: CMakeLists.txt
HWU2/: CMakeLists.txt  main.c
HW_1/: CMakeLists.txt  array_sign.c  count_substrings.c  fibonacci.c  palindrome.c  power.c  primes.c
HW_2/: CMakeLists.txt  bitwise.c
HW_3/: CMakeLists.txt  div.c  main.c  strings.c
HW_4/: CMakeLists.txt  f.txt  hash  hash_functions.c  hash_functions.h  hash_table.c  hash_table.h  hashtable  linked_list.c  linked_list.h  main.c  payload.c  payload.h  results_hash.md  results_tree.md  run.py  statistics.txt  tree
HW_4/include/: binary_tree.h  hash_functions.h  hash_table.h  linked_list.h  payload.h  utils.h
HW_4/src/: binary_tree.c  hash.c  hash_functions.c  hash_table.c  linked_list.c  payload.c  tree.c  utils.c
HW_4/texts/: test.txt  utf.txt
HW_4/texts/alphanumeric/: master_i_margarita.txt
HW_4/texts/hash_output/: master_i_margarita.txt  warandpeace.txt
HW_4/texts/py_output/raw/: master_i_margarita.txt  warandpeace.txt
HW_4/texts/raw/: master_i_margarita.txt  trudnobytbogom.txt
HW_5/: CMakeLists.txt  overflow.c
HW_6/: binary_tree.h  main.c  statistic.txt
HW_7/: main.c
Hash Functions/: polynome.h
HashFunction/: polynome.h
Hashtable/: statistics.txt
Headers/: binaryTree.h  stringHandling.h
Hw1/: (10).c  (5).c  (6).c  (7).c  (8).c  (9).c  task10.c  task5.c  task6.c  task7.c  task8.c  task9.c
Hw2/: Hw2.c  bitTricks.c
Hw5/: HashTable.c  mertvye-dushi.txt  result.txt  statisticFile.txt
Hw6/: BinaryTree.c  result.txt
Hw7/: BufferOverflow.c
Hw_2/: Task5.c  Task8.c
Hw_4/: BitTricks.c
Hw_6/: BinaryTree.c  README.txt  book.txt  main.c  statistic.txt
Hw_7/: README.txt
Output/: Analysis.txt  Results.txt
Task_10/: 10_fibonacci_numbers.c
Task_5/: 5_pow.c
Task_6/: 6_multiplication_sign.c
Task_7/: 7_palindrome.c
hw2/: 2.c  str.c  (+6 more)
(+159 files in other folders)
